Adicionado em AULA-16\EXERCICIOS\PRATICA\PROJETO-07  o projeto PROJETO-07 que têm como objetivo mostrar o nome de um usuário

--- a/AULA-16/EXERCICIOS/PRATICA/PROJETO-06/app/src/main/res/values/strings.xml
+++ b/AULA-16/EXERCICIOS/PRATICA/PROJETO-06/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Projeto-06</string>
+    <string name="mensagem_par">%d é par</string>
+    <string name="mensagem_impar">%d é impar</string>
 </resources>
